@@ -376,7 +376,7 @@ void become_follower (object *op, object *new_god) {
     object *old_god = NULL;                      /* old god */
     treasure *tr;
     object *item, *skop, *next;
-    int i;
+    int i,sk_applied;
     
     old_god = find_god(determine_god(op));
     
@@ -440,11 +440,13 @@ void become_follower (object *op, object *new_god) {
 	skop = give_skill_by_name(op, get_archetype_by_type_subtype(SKILL, SK_PRAYING)->clone.skill);
     }
 
+	sk_applied=QUERY_FLAG(skop,FLAG_APPLIED); /* save skill status */
+
     if(skop->title) { /* get rid of old god */ 
 	new_draw_info_format(NDI_UNIQUE,0,op,
 	       "%s's blessing is withdrawn from you.",skop->title);
 	/* The point of this is to really show what abilities the player just lost */
-	if (QUERY_FLAG(skop, FLAG_APPLIED)) {
+	if (sk_applied) {
 	    CLEAR_FLAG(skop,FLAG_APPLIED); 
 	    (void) change_abil(op,skop);
 	}
@@ -502,8 +504,11 @@ void become_follower (object *op, object *new_god) {
 	stop_using_item(op,SHIELD,1);
     }
 
-/*    SET_FLAG(skop,FLAG_APPLIED);*/
+    SET_FLAG(skop,FLAG_APPLIED);
     (void) change_abil(op,skop);
+
+	/* return to previous skill status */
+	if (!sk_applied) CLEAR_FLAG(skop,FLAG_APPLIED);
 
     check_special_prayers (op, new_god);
 }
